# croc

./: .gitmodules  Cargo.toml  README.md
croc-mole/: '  Cargo.toml
croc-mole/benches/: benchmark.rs
croc-mole/src/: lib.rs  mol.rs
croc-mole/test_data/: GeAsBr-ccpvdz-int1e-kin.npy  GeAsBr-ccpvdz-int1e-nuc.npy  GeAsBr-ccpvdz-int1e-ovlp.npy  HH-ccpvdz-int1e-kin.npy  HH-ccpvdz-int1e-nuc.npy  HH-ccpvdz-int1e-ovlp.npy  HH-ccpvdz-int2e.npy  HH-int1e-kin.npy  HH-int1e-nuc.npy  HH-int1e-ovlp.npy  HH-int2e.npy  HLi-ccpvdz-int1e-kin.npy  HLi-ccpvdz-int1e-nuc.npy  HLi-ccpvdz-int1e-ovlp.npy  HLi-ccpvdz-int2e.npy  HLi-int1e-kin.npy  HLi-int1e-nuc.npy  HLi-int1e-ovlp.npy  HLi-int2e.npy  Ti-ccpvdz-int1e-kin.npy  Ti-ccpvdz-int1e-nuc.npy  Ti-ccpvdz-int1e-ovlp.npy  Ti-int1e-kin.npy  Ti-int1e-nuc.npy  Ti-int1e-ovlp.npy  Ti-int2e.npy
croc-parse/: Cargo.toml
croc-parse/src/: lib.rs  parse_nwchem.rs
r-libcint/: Cargo.toml  build.rs
r-libcint/src/: lib.rs
