[package]
name = "croc-mole"
version = "0.1.0"
edition = "2024"

[dependencies]
phf = { version = "0.11", features = ["macros"] }
statrs = "0.18.0"
itertools = "0.13.0"
croc-parse = { path = "../croc-parse" }
r-libcint = { path = "../r-libcint" }
ndarray = { version = "0.16.1", features = ["approx"] }
[dev-dependencies]
ndarray-npy = "0.9.1"
criterion = "0.5.1"
[[bench]] 
name = "benchmark"
harness = false
